--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,36 @@
 body {
-  padding-top: 50px;
-  background: #2D2D29
+	padding-top: 50px;
+	background: #2D2D29
 }
 .home {
-  color: #FFFFFF;
-  padding: 40px 15px;
-  text-align: center;
+	color: #FFFFFF;
+	padding: 40px 15px;
+	text-align: center;
+}
+.home h1 {
+	margin-bottom: 20px;
 }
 .home button {
-  color: #000000;
+	color: #000000;
 }
-
+.row {
+	margin-right: 0px;
+	margin-left: 0px;
+}
+.left {
+	width: 80%;
+	display: inline-block;
+	float: left;
+}
+.left input {
+	height: 40px;
+}
+.right {
+	width: 15%;
+	display: inline-block;
+	float: right;
+	margin-bottom: 10px;
+}
+.right button {
+	height: 40px;
+}
