--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,15 @@ body {
 .row {
 	margin-right: 0px;
 	margin-left: 0px;
+	margin-bottom: 20px;
 }
 .left {
 	width: 80%;
 	display: inline-block;
 	float: left;
 }
-.left input {
-	height: 40px;
+.text-box {
+	height: 40px !important;
 }
 .right {
 	width: 15%;
@@ -33,4 +34,45 @@ body {
 }
 .right button {
 	height: 40px;
+}
+.btn-group-lg > .btn, .btn-lg {
+    padding: 0;
+}
+.description {
+	border-radius: 10px 10px 10px 10px;
+	-moz-border-radius: 10px 10px 10px 10px;
+	-webkit-border-radius: 10px 10px 10px 10px;
+	border: 1px solid #000000;
+	background-color: #fff;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	color: #000;
+	padding: 10px;
+}
+.description p {
+	margin-bottom: 5px;
+}
+.small-btn {
+	padding: 10px;
+}
+#result {
+	display: none;
+	border-radius: 10px 10px 10px 10px;
+	-moz-border-radius: 10px 10px 10px 10px;
+	-webkit-border-radius: 10px 10px 10px 10px;
+	border: 1px solid #000000;
+	background-color: #fff;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	color: #000;
+	padding: 10px;
+}
+.table {
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
 }
